# romannumeralmath-api

./: CONTRIBUTING.md  README.md  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/romannumeralmath/: APIClient.java  APIException.java  APIResponse.java
android/src/main/java/com/apiverve/romannumeralmath/data/: ResponseModels.java
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: Readme.md  ResponseObj.cs  RomanNumeralMathAPIClient.cs  RomanNumeralMathAPIClient.csproj  RomanNumeralMathAPIClient.sln  RomanNumeralMathQueryOptions.cs
python/: README.md  pyproject.toml
python/src/apiverve_romannumeralmath/: __init__.py  apiClient.py  exceptions.py  setup.py  setup_dep.py
python/src/apiverve_romannumeralmath/tests/: test_api.py
python/tests/: test_api.py
